fix(explorer): fix documentation overflowing of parent

--- a/src/explorer/src/styles/index.css
+++ b/src/explorer/src/styles/index.css
@@ -149,3 +149,12 @@
   -moz-box-shadow: 0px 0px 5px 5px #A3BFFA;
   box-shadow: 0px 0px 5px 5px #A3BFFA;
 }
+
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
